# HalfLifeAssetManager

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  HLMV.sln  HLMV.vcxproj  HLMV.vcxproj.filters  HL_Tools.sln  LICENSE.md  ProjectInfo.hpp.in  README.md  vcpkg-configuration.json  vcpkg.json
src/core/: CMakeLists.txt  LibHLCore.cpp  LibHLCore.h
src/core/shared/: CMakeLists.txt  CWorldTime.cpp  CWorldTime.h  Const.h  Logging.cpp  Logging.h  Platform.h  Utility.cpp  Utility.h
src/cvar/: CBaseConCommand.cpp  CBaseConCommand.h  CCVar.cpp  CCVar.h  CCVarSystem.cpp  CCVarSystem.h  CConCommand.cpp  CCvarSystem.cpp  CMakeLists.txt  CVar.cpp  CVar.h  CVarUtils.cpp  CVarUtils.h  ConVarConstants.h  ICVarSystem.h
src/engine/renderer/: CBaseRenderContext.h  CMakeLists.txt  CRendererLibrary.cpp  CRendererLibrary.h
src/engine/renderer/gl/: CBaseGLRenderContext.cpp  CBaseGLRenderContext.h  CMakeLists.txt
src/engine/renderer/sprite/: CMakeLists.txt  CSpriteRenderer.cpp  CSpriteRenderer.h
src/filesystem/: CFileSystem.cpp  CFileSystem.h  CMakeLists.txt  FileSystemConstants.cpp  IFileSystem.h
src/hlam/: CMakeLists.txt  hlam.rc  version.rc
src/hlam/application/: ApplicationBuilder.hpp  AssetIO.hpp  AssetList.cpp  AssetList.hpp  AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  EditorContext.cpp  EditorContext.hpp  SingleInstance.hpp  ToolApplication.cpp  ToolApplication.hpp
src/hlam/assets/: AssetIO.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt
src/hlam/entity/: AxesEntity.cpp  AxesEntity.hpp  BackgroundEntity.cpp  BackgroundEntity.hpp  BaseAnimating.hpp  BaseEntity.hpp  BoundingBoxEntity.cpp  BoundingBoxEntity.hpp  CMakeLists.txt  ClippingBoxEntity.cpp  ClippingBoxEntity.hpp  CrosshairEntity.cpp  CrosshairEntity.hpp  EntityList.cpp  Events.hpp  GroundEntity.cpp  GroundEntity.hpp  GuidelinesEntity.cpp  GuidelinesEntity.hpp  HLMVStudioModelEntity.cpp  HLMVStudioModelEntity.hpp  PlayerHitboxEntity.cpp  PlayerHitboxEntity.hpp  SpriteEntity.cpp  SpriteEntity.hpp  StudioModelEntity.cpp  StudioModelEntity.hpp  TextureEntity.cpp  TextureEntity.hpp
src/hlam/filesystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  FileSystemConstants.cpp  FileSystemConstants.hpp  IFileSystem.hpp
src/hlam/formats/: CMakeLists.txt  DrawConstants.hpp  activity.hpp
src/hlam/graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  GraphicsConstants.cpp  GraphicsConstants.hpp  GraphicsUtils.cpp  GraphicsUtils.hpp  Image.hpp  Light.hpp  OpenGL.hpp  Palette.hpp  Scene.cpp  Scene.hpp  SceneContext.hpp  TextureLoader.cpp  TextureLoader.hpp
src/hlam/plugins/: CMakeLists.txt  IAssetManagerPlugin.hpp
src/hlam/qt/: CMakeLists.txt  HashFunctions.hpp  ObservableList.hpp  QtLogSink.hpp  QtLogging.cpp  QtLogging.hpp  QtUtilities.cpp  QtUtilities.hpp
src/hlam/settings/: ApplicationSettings.cpp  ApplicationSettings.hpp  BaseSettings.hpp  CMakeLists.txt  ColorSettings.hpp  ExternalProgramSettings.cpp  ExternalProgramSettings.hpp  GameConfigurationsSettings.cpp  GameConfigurationsSettings.hpp  GameEnvironment.hpp  PathSettings.hpp  RecentFilesSettings.hpp  StudioModelSettings.cpp  StudioModelSettings.hpp  StyleSettings.hpp
src/hlam/soundsystem/: DummySoundSystem.hpp  ISoundSystem.hpp  SoundConstants.hpp  SoundSystem.cpp  SoundSystem.hpp
src/hlam/ui/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  DockableWidget.hpp  DragNDropEventFilter.hpp  EditorContext.cpp  EditorContext.hpp  FileListPanel.cpp  FileListPanel.hpp  FileListPanel.ui  FullscreenWidget.cpp  FullscreenWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpenGLGraphicsContext.hpp  SceneWidget.cpp  SceneWidget.hpp  StateSnapshot.hpp
src/hlam/utility/: BoundingBox.hpp  ByteSwap.cpp  ByteSwap.hpp  CMakeLists.txt  Class.hpp  IOUtils.cpp  IOUtils.hpp  Platform.hpp  Random.cpp  Tokenizer.cpp  Tokenizer.hpp  Utility.hpp  WorldTime.hpp  mathlib.cpp  mathlib.hpp
src/keyvalues/: CKeyvalue.cpp  CKeyvalue.h  CKeyvalueBlock.cpp  CKeyvalueBlock.h  CKeyvalueNode.cpp  CKeyvalueNode.h  CKeyvalues.cpp  CKeyvalues.h  CKeyvaluesLexer.cpp  CKeyvaluesLexer.h  CKeyvaluesParser.cpp  CKeyvaluesParser.h  CKeyvaluesWriter.cpp  CKeyvaluesWriter.h  CKvBlockNode.cpp  CKvBlockNode.h  CMakeLists.txt  Keyvalues.h  KeyvaluesConstants.h
src/soundsystem/: CMakeLists.txt  CSoundSystem.cpp  CSoundSystem.h  FMODDebug.cpp  FMODDebug.h  ISoundSystem.h  SoundConstants.h
src/soundsystem/shared/: CMakeLists.txt
src/stdlib/: CMakeLists.txt
src/stdlib/app/: CAppSystem.cpp  CAppSystem.h  CMakeLists.txt
src/stdlib/cvar/: CConCommand.h  CMakeLists.txt  CVarUtils.cpp
src/stdlib/filesystem/: CFileSystem.h  FileSystemConstants.cpp  FileSystemConstants.h
src/stdlib/graphics/: CCamera.cpp  CCamera.h  CMakeLists.txt  GLRenderTarget.cpp  GLRenderTarget.h  GraphicsUtils.cpp  GraphicsUtils.h  OpenGL.cpp  OpenGL.h
src/stdlib/html/: CHTMLElement.cpp  CHTMLHeader.cpp  CHTMLHeader.h  CHTMLPage.h  CMakeLists.txt
src/stdlib/keyvalues/: CKeyvaluesParser.h  CKeyvaluesWriter.cpp  KVForward.h
src/stdlib/lib/: CLibrary.cpp  CMakeLists.txt  LibConstants.h
src/stdlib/settings/: CBaseConfigManager.h  CBaseSettings.cpp  CBaseSettings.h  CCmdLineConfig.cpp  CCmdLineConfig.h  CGameConfig.cpp  CGameConfig.h  CGameConfigManager.h  CMakeLists.txt  CRecentFiles.h  GameConfigIO.cpp  GameConfigIO.h
src/stdlib/utility/: ByteSwap.h  CEscapeSequences.cpp  CMakeLists.txt  CString.cpp  CString.h  Color.cpp  IOUtils.cpp  IOUtils.h  PlatUtils.cpp  PlatUtils.h  StringUtils.h  Tokenization.h  mathlib.cpp  mathlib.h
src/tools/: CMakeLists.txt
src/tools/asdocgenerator/: CDocGenerator.cpp  CDocGenerator.h  CMakeLists.txt  Main.cpp
src/tools/hlam/: CMakeLists.txt  Main.cpp  resources.qrc  version.hpp.in  version.rc.in
src/tools/hlmv/: CHLMVState.cpp  CHLMVState.h  CMakeLists.txt  Credits.cpp  Credits.hpp  Main.cpp  hlmv.rc
src/tools/shared/: CBaseTool.cpp  CBaseTool.h  CBaseToolApp.cpp  CBaseToolApp.h  CBaseWXToolApp.cpp  CBaseWXToolApp.h  CMakeLists.txt  Credits.cpp  Credits.h
src/tools/spriteviewer/: CMakeLists.txt  CSpriteViewerState.cpp  CSpriteViewerState.h
(+1563 files in other folders)
