target_sources(HLAM
	PRIVATE
		DockableWidget.hpp
		DragNDropEventFilter.hpp
		FileListPanel.cpp
		FileListPanel.hpp
		FileListPanel.ui
		FullscreenWidget.cpp
		FullscreenWidget.hpp
		MainWindow.cpp
		MainWindow.hpp
		MainWindow.ui
		OpenGLGraphicsContext.hpp
		SceneWidget.cpp
		SceneWidget.hpp
		StateSnapshot.hpp)

add_subdirectory(camera_operators)
add_subdirectory(options)
